--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-10 08:03:05
+lastsearch = 2024-07-10 12:31:18
 
 [demxanh.com]
 match = 13.8%%
@@ -27,9 +27,9 @@ title = Bộ Chăn Ga Gối Lụa Tencel (Pyeoda Sky Silk) - Nệm Cao Su
 url = https://changagoinemgiasi.com/san-pham/bo-chan-ga-goi-lua-tencel-pyeoda-sky-silk/
 
 [shopee.vn]
-match = -31.0%%
-title = chăn ga pyeoda giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chăn ga pyeoda
+match = -20.7%%
+title = bộ chăn ga pyeoda giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ chăn ga pyeoda&urlold=bo-chan-ga-goi-lua-pyeoda-kt-1m8-mau-lp1/4647385422273837956/3385656584626545253/ 
 
 [thegioidemonline.com]
 match = 34.5%%
@@ -49,7 +49,7 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 [www.facebook.com]
 match = 28.0%%
 title = Chăn Ga Gối Đệm Singapore
-url = https://www.facebook.com/changagoisingapore/?locale=uk_UA
+url = https://www.facebook.com/changagoisingapore/?locale=de_DE
 
 [changagoidemdep.vn]
 match = 3.4%%
