--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-10 11:33:02
+lastsearch = 2024-07-10 12:34:34
 
 [en.wikipedia.org]
 match = 8.7%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-7ecUkecg&sig=ACfU3U1YJ_R59AlRDyuKssI7NdJhjF-eLw&hl=en&sa=X&ved=2ahUKEwjS5Pyq2tGGAxVkD1kFHc2aBHgQ6AF6BAgnEAM
 
 [30rates.com]
-match = -91.3%%
-title = USD to MXN forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
+match = -104.3%%
+title = Gold Price Prediction For Tomorrow, This Week And Month.
+url = https://30rates.com/gold-price-forecast-and-predictions
 
 [www.ncbi.nlm.nih.gov]
 match = -108.7%%
@@ -112,9 +112,9 @@ title =
 url = https://www.koreanclass101.com/korean-age/
 
 [www.tiktok.com]
-match = -150.0%%
-title = Tadzhowa
-url = https://www.tiktok.com/discover/tadzhowa
+match = -73.9%%
+title = o dealer receitou cadialina 😂 - #minerva - #cblol
+url = https://www.tiktok.com/@gustavominerva/video/7389477096369720622
 
 [www.unikorea.go.kr]
 match = -113.0%%
