--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-10 10:47:44
+lastsearch = 2024-07-10 12:31:09
 
 [demxanh.com]
 match = -22.7%%
@@ -17,8 +17,8 @@ title = Thảm ghế thảm giường - Trang 4
 url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
 
 [thegioidemonline.vn]
-match = -50.0%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
+match = -109.1%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội - Chăn ga gối
 url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [noithatkenli.vn]
@@ -27,8 +27,8 @@ title = Tìm Hiểu Kích Thước Giường Ngủ Các Loại
 url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 
 [ru9.vn]
-match = -81.8%%
-title = Đệm giường đơn giá tốt, bảng giá các loại ... - Ru9
+match = -72.7%%
+title = Đệm giường đơn có những kích thước nào? Bảng giá
 url = https://ru9.vn/blogs/magazine/dem-giuong-don
 
 [cafeland.vn]
@@ -42,8 +42,8 @@ title = Thảm giường II 120x190
 url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 
 [shopee.vn]
-match = -81.8%%
-title = GIƯỜNG SÔ PHA ĐA NĂNG THÔNG MINH GẤP GỌN, SOFA ...
+match = -54.5%%
+title = GIƯỜNG SÔ PHA ĐA NĂNG THÔNG MINH GẤP GỌN ...
 url = https://shopee.vn/GIƯỜNG-SÔ-PHA-ĐA-NĂNG-THÔNG-MINH-GẤP-GỌN-SOFA-GIƯỜNG-GẤP-LẠI-THÀNH-GHẾ-i.795208755.19125639155
 
 [everonhanquoc.vn]
@@ -57,8 +57,8 @@ title = ++| A M V - Member Profile: carot22
 url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=1222186
 
 [jysk.vn]
-match = -72.7%%
-title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
+match = -118.2%%
+title = Kích thước giường ngủ tiêu chuẩn và thông dụng nhất hiện nay
 url = https://jysk.vn/kich-thuoc-giuong-ngu
 
 [anawood.vn]
