--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-10 05:32:24
+lastsearch = 2024-07-10 12:36:02
 
 [thamaulac.com.vn]
 match = -22.2%%
@@ -12,9 +12,9 @@ title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
 url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [xoptraisan.info]
-match = 22.2%%
-title = Thảm nỉ ghép Tường Lâm 60×60
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
+match = -11.1%%
+title = Thảm xốp tranh giao thông 60×60
+url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
 
 [thamvinhthuan.com]
 match = 16.7%%
