--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-10 12:13:22
+lastsearch = 2024-07-10 13:43:23
 
 [www.diepxuan.com]
 match = -6.7%%
@@ -42,9 +42,9 @@ title = Đèn LED Spotlight Âm Trần 8091 - HT Max Light
 url = https://www.htlightlevel.vn/den-led-spotlight-am-tran-8091/
 
 [www.youtube.com]
-match = -253.3%%
-title = Nga - Ấn Độ “hành động” bất ngờ trước khi Thủ tướng Modi ...
-url = https://www.youtube.com/watch?v=Lp9rE-N7qaQ
+match = -213.3%%
+title = 🔴[Trực Tiếp] Thời Sự Sáng Ngày 10/7 | Tin Thời Sự Trong ...
+url = https://www.youtube.com/watch?v=xQvpG3Qa6rY
 
 [dauthau.asia]
 match = -240.0%%
