--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-07-10 11:35:41
+lastsearch = 2024-07-10 13:44:05
 
 [demxanh.com]
-match = 48.1%%
-title = Chiếu điều hòa cao su non màu tím
-url = https://demxanh.com/chieu-cao-su-non-mau-tim.html
+match = 0.0%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [goni.vn]
 match = 14.8%%
