--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-10 01:34:33
+lastsearch = 2024-07-10 13:35:09
 
 [helloviettravel.com]
 match = -50.0%%
@@ -27,9 +27,9 @@ title = Du lịch Việt Nam - 18/5/2024 - Video đã phát trên VTV1
 url = https://vtv.vn/video/du-lich-viet-nam-18-5-2024-676711.htm
 
 [www.facebook.com]
-match = -181.2%%
-title = ‍♂️‍♀️Khám phá Khu trải nghiệm 18 tầng địa ngục tại Điểm ...
-url = https://www.facebook.com/quangninhgate/videos/️️khám-phá-khu-trải-nghiệm-18-tầng-địa-ngục-tại-điểm-du-lịch-quảng-ninh-gatekhu-/440182313402897/
+match = -12.5%%
+title = Du Lịch USA và Thế Giới
+url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
 match = -156.2%%
@@ -88,8 +88,8 @@ url = https://lienbangtravel.com/vi/tin-tuc/258-du-lich-my-khoi-dong-lai-sau-18-
 
 [www.klook.com]
 match = -168.8%%
-title = 35 Địa Điểm Du Lịch Mỹ Hấp Dẫn Cho Kỳ Nghỉ Dài - Klook
-url = https://www.klook.com/vi/blog/dia-diem-du-lich-my/
+title = 42 Địa Điểm Du Lịch Gần Sài Gòn Cho Cuối Tuần Năng ...
+url = https://www.klook.com/vi/blog/diem-du-lich-gan-sai-gon/
 
 [dulichviet.com.vn]
 match = -206.2%%
