--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-10 06:53:13
+lastsearch = 2024-07-10 13:40:19
 
 [www.bible.com]
-match = 23.1%%
-title = sawltak 20:22
-url = https://www.bible.com/bible/368/ACT.20.22.TDB
+match = -100.0%%
+title = MATHAIA 26 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MAT.26.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
