--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-10 12:35:39
+lastsearch = 2024-07-10 14:27:51
 
 [chanrathanhthuy.com]
-match = -3.2%%
-title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
+match = -6.5%%
+title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
+url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
-match = 22.6%%
-title = Mua chăn ga gối Combo- khuyên mại siêu to
-url = https://demxanh.com/chan-ga-goi-dem-giam-gia-khi-mua-combo-tai-dem-xanh.html
+match = -16.1%%
+title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
+url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
 
 [songhongonline.vn]
 match = 50.0%%
-title = Bộ chăn ga gối SH_UT23 032
-url = https://songhongonline.vn/products/nhan-ban-tu-bo-chan-ga-goi-sh-ut23-027
+title = Bộ chăn ga gối SH_UC24 102
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-102
 
 [changagoidemsonghong.com]
 match = 38.7%%
