--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-10 12:15:10
+lastsearch = 2024-07-10 14:28:27
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -200.0%%
-title = Suy Niệm Lời Chúa, Thứ Tư Tuần XIV Thường Niên (10/07 ...
-url = https://www.youtube.com/watch?v=yIOkBZs3E90
+match = -212.5%%
+title = [TV] Gấm Kami VS Uyên Phương | GIẢI POOL 9 BI HBSF II ...
+url = https://www.youtube.com/watch?v=Ir7sFOF1oOY
 
 [tuyensinh247.com]
 match = -225.0%%
