--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-10 13:42:43
+lastsearch = 2024-07-10 14:48:56
 
 [shopee.vn]
-match = -33.3%%
-title = CHIẾU ĐIỀU HOÀ MÂY LOẠI 1 ĐỦ KÍCH THƯỚC , GIÁ TẠI ...
-url = https://shopee.vn/CHIẾU-ĐIỀU-HOÀ-MÂY-LOẠI-1-ĐỦ-KÍCH-THƯỚC-GIÁ-TẠI-XƯỞNG-SẢN-XUẤT--i.46360011.4028012766
+match = -37.5%%
+title = Chiếu Điều Hòa Loại Dầy Sợi Mây Tổng Hợp Cao Cấp, ...
+url = https://shopee.vn/Chiếu-Điều-Hòa-Loại-Dầy-Sợi-Mây-Tổng-Hợp-Cao-Cấp-Chiếu-Điều-Hòa-Thông-Minh-Thoáng-Khí-Mát-Rượi-i.283091656.2942408197
 
 [www.diepxuan.com]
 match = 100.0%%
