--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-10 10:33:46
+lastsearch = 2024-07-10 14:44:41
 
 [burningman.org]
 match = -60.0%%
@@ -875,4 +875,9 @@ url = https://www.shakespearetheatre.org/
 match = -226.7%%
 title = Foreigner apply for e-visa - National portal on Immigration
 url = https://www.xuatnhapcanh.gov.vn/khai-thi-thuc-dien-tu/cap-thi-thuc-dien-tu?type=edit&maSoHoSo=
+
+[www.rct.uk]
+match = 7.1%%
+title = Windsor Castle
+url = https://www.rct.uk/visit/windsor-castle
 
