--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-10 11:34:57
+lastsearch = 2024-07-10 14:46:36
 
 [shopee.vn]
 match = 48.0%%
@@ -22,9 +22,9 @@ title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 202
 url = https://www.mungbaobao.com/
 
 [tiki.vn]
-match = -44.0%%
-title = Màn đỉnh vuông 1m4 x 2m hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=màn đỉnh vuông 1m4 x 2m
+match = -8.0%%
+title = Màn đỉnh vuông hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=màn đỉnh vuông
 
 [www.mantubung.com]
 match = -52.0%%
