--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-10 10:47:53
+lastsearch = 2024-07-10 14:46:47
 
 [www.lazada.vn]
 match = -88.9%%
@@ -17,14 +17,14 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -100.0%%
-title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
-url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
+match = -177.8%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
+url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
-match = 17.6%%
-title = Bảng Giá Nệm 2024
-url = https://thegioinem.com/bang-gia-nem
+match = -155.6%%
+title = TOP 12 thương hiệu nệm cao su khuyến mãi, giá rẻ tại ...
+url = https://thegioinem.com/top-12-thuong-hieu-nem-cao-su-khuyen-mai-gia-re-tai-thegioinem-com.html
 
 [www.facebook.com]
 match = -83.3%%
@@ -37,9 +37,9 @@ title = 9X gói nem 10 cái đẹp như 10 nhờ mẹo cực hay, trữ đông .
 url = https://eva.vn/bep-eva/9x-goi-nem-10-cai-dep-nhu-10-nho-meo-cuc-hay-tru-dong-nem-de-lau-van-ngon-c162a501885.html
 
 [www.tiktok.com]
-match = 5.6%%
-title = Tubby Todd Spf Yuka
-url = https://www.tiktok.com/discover/tubby-todd-spf-yuka
+match = -172.2%%
+title = Replying to @user74757483939 Brodard’s nem nuong sauce ...
+url = https://www.tiktok.com/@quyen_cooks/video/7216197212018068779?lang=en
 
 [www.youtube.com]
 match = -150.0%%
