--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-10 12:50:48
+lastsearch = 2024-07-10 15:50:22
 
 [www.facebook.com]
 match = -141.2%%
@@ -62,9 +62,9 @@ title = Mark Goodman, PhD - Profile | Emory School of Medicine
 url = https://med.emory.edu/departments/radiology/profile/?u=MGOODMA
 
 [faculty.mdanderson.org]
-match = 0.0%%
-title = Hans Lee, MD
-url = https://faculty.mdanderson.org/profiles/hans_lee.html
+match = -8.3%%
+title = Andy Futreal
+url = https://faculty.mdanderson.org/profiles/andrew_futreal.html
 
 [pfas-1.itrcweb.org]
 match = -17.6%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Seeing the unseen of Chinese herbal medicine processing ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
+match = -176.5%%
+title = SARS-CoV-2 Spike protein co-opts VEGF-A/Neuropilin-1 ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7457601/
 
 [books.google.com]
 match = -7.7%%
