--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-10 14:15:54
+lastsearch = 2024-07-10 15:45:23
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -253.3%%
-title = D2 (1976--1981) ĐHCSND | Đầu tháng 3 âm lịch , kể ra thì ...
-url = https://www.facebook.com/groups/925615600806693/posts/đầu-tháng-3-âm-lịch-kể-ra-thì-vẫn-còn-tiết-xuân-sau-hội-khoá-46-năm-một-năm-rưỡi/7753730264661825/
+match = -126.7%%
+title = Ways Station Gaming - "Nghiêng nước ...
+url = https://www.facebook.com/waysstation/photos/a.179106562519975/1171642583266363/?type=3
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -52,8 +52,8 @@ title = LineaBon D3K2 | Vitamin D3 K2 Tăng chiều cao hiệu quả cho ...
 url = https://www.lineabon.vn/product-page/lineabon-d3k2
 
 [www.diepxuan.com]
-match = 33.3%%
-title = Điệp Xuân Chiếu lác D2 12
+match = 20.0%%
+title = Chiếu lác D2 12 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
@@ -250,4 +250,9 @@ url = https://cchouse.vn/Ban-Mat-tien-1113-Nguyen-Van-Lac-P21-Quan-Binh-Thanh-Go
 match = -53.3%%
 title = Sạc pin Fenix ARE-D2 Micro USB
 url = https://chuyentactical.com/den-pin/sac-pin-fenix-are-d2/
+
+[concung.com]
+match = -220.0%%
+title = Ba lô chống lạc bé gái Princess DHF19017-D2 (Hồng) giá tốt
+url = https://concung.com/thoi-trang/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html
 
