--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-10 15:35:39
+lastsearch = 2024-07-10 15:48:01
 
 [dongagroup.vn]
 match = -272.7%%
@@ -69,7 +69,7 @@ url = https://shopee.vn/list/giường/1m2
 [3dwarehouse.sketchup.com]
 match = -136.4%%
 title = GIUONG MAN - 3D Warehouse - SketchUp
-url = https://3dwarehouse.sketchup.com/model/eba5b527-24ac-4932-9b5f-e745fe84fe9b/GIUONG-MAN?hl=hu
+url = https://3dwarehouse.sketchup.com/model/eba5b527-24ac-4932-9b5f-e745fe84fe9b/GIUONG-MAN
 
 [www.ducloi.vn]
 match = -172.7%%
@@ -92,9 +92,9 @@ title = Giường 2mx2m2 hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
-match = -318.2%%
-title = Có bán Khung giường bằng kim loại tại Mankato, Minnesota
-url = https://www.facebook.com/marketplace/mankato/metal-bed-frames/?locale=vi_VN
+match = -281.8%%
+title = Có bán Giường & khung giường đơn tiêu chuẩn tại ...
+url = https://www.facebook.com/marketplace/mankato/full-size-beds/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
