--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-10 14:14:37
+lastsearch = 2024-07-10 15:51:07
 
 [www.everonvn.vn]
-match = -110.0%%
-title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
+match = 20.0%%
+title = Đệm bông Everon 1m, 1m2, 1m4
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m-1m2-1m4.html
 
 [everon.vip]
 match = 50.0%%
@@ -47,8 +47,8 @@ title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
 url = https://everon.com.vn/kich-co/120200/
 
 [demqueensweet.com]
-match = -65.0%%
-title = Đệm Queensweet Giá Rẻ – Đệm Hàn Quốc ...
+match = -130.0%%
+title = Giá Đệm Queensweet, Đệm Hàn Quốc Queensweet Hà Nội ...
 url = https://demqueensweet.com/
 
 [www.lazada.vn]
