--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-10 10:17:35
+lastsearch = 2024-07-10 16:14:10
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
 url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [songhong.info]
-match = -75.0%%
-title = Chăn ga gối Basic 100%% cotton mã BC22-052 - Sông Hồng ...
-url = https://songhong.info/chan-ga-goi-bc52
+match = -8.3%%
+title = Mẫu chăn ga gối cao cấp Urban mã UC22-021
+url = https://songhong.info/chan-ga-goi-uc021
 
 [hanvico.com.vn]
 match = 41.7%%
@@ -38,8 +38,8 @@ url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-202
 
 [everon.com.vn]
 match = -66.7%%
-title = Bộ Chăn Ga Everon ESB 22055 Bộ Sưu Tập Mới Nhất Năm ...
-url = https://everon.com.vn/bo-chan-ga-everon-esb-22055/
+title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/
 
 [dailyeveron.vn]
 match = -66.7%%
