--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-10 14:17:03
+lastsearch = 2024-07-10 16:18:59
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -157,9 +157,9 @@ title = Primary 6 Examination Papers 2015 - Singapore
 url = https://smiletutor.sg/wp-content/uploads/2020/10/P6_Math_2015.pdf
 
 [www.vinmec.com]
-match = -129.4%%
-title = Độ mờ da gáy ở thai nhi bao nhiêu là bình thường?
-url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/san-phu-khoa-va-ho-tro-sinh-san/do-mo-da-gay-o-thai-nhi-bao-nhieu-la-binh-thuong/
+match = -176.5%%
+title = Ý nghĩa xét nghiệm HbA1c trong kiểm soát glucose ở bệnh ...
+url = https://www.vinmec.com/vi/tin-tuc/thong-tin-suc-khoe/y-nghia-xet-nghiem-hba1c-trong-kiem-soat-glucose-o-benh-nhan-dai-thao-duong-va-tam-soat-som-benh-dai-thao-duong/
 
 [antoanthanhpho.vn]
 match = -58.8%%
