--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-10 15:42:11
+lastsearch = 2024-07-10 16:21:21
 
 [shopee.vn]
-match = -18.5%%
-title = Chiếu điều hoà, ga giường cao su non không bí lưng ...
-url = https://shopee.vn/Chiếu-điều-hoà-ga-giường-cao-su-non-không-bí-lưng-HÀNG-LOẠI-1(TẶNG-2-VỎ-GỐI)-i.49163646.20104275799
+match = -33.3%%
+title = Chiếu điều hoà Muji lót lụa cao cấp hàng loại 1 ( không ...
+url = https://shopee.vn/Chiếu-điều-hoà-Muji-lót-lụa-cao-cấp-hàng-loại-1-(-không-kèm-vỏ-gối)-i.19058947.8867361209
 
 [demxanh.com]
 match = 14.8%%
